v0.0.1/modules/schema/pages/class/Pss5.adoc
= `Pss5`
:toclevels: 4


+++Detailed Italian PSS.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Pss5`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`Pss5`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Pss5 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

























ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}















Pss5 -> ExcitationSystemDynamics: ExcitationSystemDynamics


Pss5 -> RemoteInputSignal: RemoteInputSignal


Pss5 -> DiagramObject: DiagramObjects


Pss5 -> InstanceSet: InstanceSet


Pss5 -> Name: Names


Pss5 -> ChangeSetMember: PropertiesCIMDataObject


Pss5 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ctw2,`ctw2`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector for second washout enabling (<i>C</i><i><sub>TW2</sub></i>).
true = second washout filter is bypassed
false = second washout filter in use.
Typical value = true.+++

| <<deadband,`deadband`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stabilizer output deadband (<i>DEADBAND</i>).  Typical value = 0.+++

| <<isfreq,`isfreq`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector for frequency/shaft speed input (<i>isFreq</i>).
true = speed (same meaning as InputSignaKind.rotorSpeed)
false = frequency (same meaning as InputSignalKind.busFrequency).
Typical value = true (same meaning as InputSignalKind.rotorSpeed).+++

| <<kf,`kf`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Frequency/shaft speed input gain (<i>K</i><i><sub>F</sub></i>).  Typical value = 5.+++

| <<kpe,`kpe`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Electric power input gain (<i>K</i><i><sub>PE</sub></i>).  Typical value = 0,3.+++

| <<kpss,`kpss`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++PSS gain (<i>K</i><i><sub>PSS</sub></i>).  Typical value = 1.+++

| <<pmin,`pmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum power PSS enabling (<i>Pmin</i>).  Typical value = 0,25.+++

| <<tl1,`tl1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lead/lag time constant (<i>T</i><i><sub>L1</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl2,`tl2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lead/lag time constant (<i>T</i><i><sub>L2</sub></i>) (&gt;= 0).  If = 0, both blocks are bypassed.  Typical value = 0.+++

| <<tl3,`tl3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lead/lag time constant (<i>T</i><i><sub>L3</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl4,`tl4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Lead/lag time constant (T<sub>L4</sub>) (&gt;= 0).  If = 0, both blocks are bypassed.  Typical value = 0.+++

| <<tpe,`tpe`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Electric power filter time constant (<i>T</i><i><sub>PE</sub></i>) (&gt;= 0).  Typical value = 0,05.+++

| <<tw1,`tw1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++First washout (<i>T</i><i><sub>W1</sub></i>) (&gt;= 0).  Typical value = 3,5.+++

| <<tw2,`tw2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Second washout (<i>T</i><i><sub>W2</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<vadat,`vadat`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++<font color="#0f0f0f">Signal selector (<i>V</i><i><sub>adAtt</sub></i>).</font>
<font color="#0f0f0f">true = closed (generator power is greater than <i>Pmin</i>)</font>
<font color="#0f0f0f">false = open (<i>Pe</i> is smaller than <i>Pmin</i>).</font>
<font color="#0f0f0f">Typical value = true.</font>+++

| <<vsmn,`vsmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stabilizer output maximum limit (<i>V</i><i><sub>SMN</sub></i>).  Typical value = -0,1.+++

| <<vsmx,`vsmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stabilizer output minimum limit (<i>V</i><i><sub>SMX</sub></i>).  Typical value = 0,1.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..*
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ctw2]
=== `ctw2`
+++Selector for second washout enabling (<i>C</i><i><sub>TW2</sub></i>).
true = second washout filter is bypassed
false = second washout filter in use.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.ctw2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#deadband]
=== `deadband`
+++Stabilizer output deadband (<i>DEADBAND</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.deadband`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isfreq]
=== `isfreq`
+++Selector for frequency/shaft speed input (<i>isFreq</i>).
true = speed (same meaning as InputSignaKind.rotorSpeed)
false = frequency (same meaning as InputSignalKind.busFrequency).
Typical value = true (same meaning as InputSignalKind.rotorSpeed).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.isfreq`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#kf]
=== `kf`
+++Frequency/shaft speed input gain (<i>K</i><i><sub>F</sub></i>).  Typical value = 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.kf`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kpe]
=== `kpe`
+++Electric power input gain (<i>K</i><i><sub>PE</sub></i>).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.kpe`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kpss]
=== `kpss`
+++PSS gain (<i>K</i><i><sub>PSS</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.kpss`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pmin]
=== `pmin`
+++Minimum power PSS enabling (<i>Pmin</i>).  Typical value = 0,25.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tl1]
=== `tl1`
+++Lead/lag time constant (<i>T</i><i><sub>L1</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.tl1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl2]
=== `tl2`
+++Lead/lag time constant (<i>T</i><i><sub>L2</sub></i>) (&gt;= 0).  If = 0, both blocks are bypassed.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.tl2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl3]
=== `tl3`
+++Lead/lag time constant (<i>T</i><i><sub>L3</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.tl3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl4]
=== `tl4`
+++Lead/lag time constant (T<sub>L4</sub>) (&gt;= 0).  If = 0, both blocks are bypassed.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.tl4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tpe]
=== `tpe`
+++Electric power filter time constant (<i>T</i><i><sub>PE</sub></i>) (&gt;= 0).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.tpe`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tw1]
=== `tw1`
+++First washout (<i>T</i><i><sub>W1</sub></i>) (&gt;= 0).  Typical value = 3,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.tw1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tw2]
=== `tw2`
+++Second washout (<i>T</i><i><sub>W2</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.tw2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#vadat]
=== `vadat`
+++<font color="#0f0f0f">Signal selector (<i>V</i><i><sub>adAtt</sub></i>).</font>
<font color="#0f0f0f">true = closed (generator power is greater than <i>Pmin</i>)</font>
<font color="#0f0f0f">false = open (<i>Pe</i> is smaller than <i>Pmin</i>).</font>
<font color="#0f0f0f">Typical value = true.</font>+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.vadat`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#vsmn]
=== `vsmn`
+++Stabilizer output maximum limit (<i>V</i><i><sub>SMN</sub></i>).  Typical value = -0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.vsmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vsmx]
=== `vsmx`
+++Stabilizer output minimum limit (<i>V</i><i><sub>SMX</sub></i>).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Pss5.vsmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


